--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,37 @@
 name: generate animation
 
 on:
-  # run automatically every 24 hours
+  # Executa automaticamente a cada 24 horas
   schedule:
-    - cron: "0 */12 * * *" 
-  
-  # allows to manually run the job at any time
+    - cron: "0 */24 * * *"
+
+  # Permite executar manualmente o job a qualquer momento
   workflow_dispatch:
-  
-  # run on every push on the master branch
+
+  # Executa a cada push no branch master
   push:
     branches:
-    - master
-    
-  
+      - master
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      # Gera um jogo da cobrinha a partir do gráfico de contribuições do GitHub do usuário (<nome_do_usuário_do_github>), gera uma animação svg em <caminho_saida_svg>
       - name: generate github-contribution-grid-snake.svg
-        uses: marceloteck/snk/svg-only@v3
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: marceloteck
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-          
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+
+      # Faz o push do conteúdo do <build_dir> para um branch
+      # O conteúdo estará disponível em https://raw.githubusercontent.com/<usuário_do_github>/<repositório>/<target_branch>/<arquivo>, ou como página do GitHub
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
