--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,23 @@
-name: generate animation
+- uses: Platane/snk@v3
+  with:
+    # github user name to read the contribution graph from (**required**)
+    # using action context var `github.repository_owner` or specified user
+    github_user_name: ${{ github.repository_owner }}
 
-on:
-  # Executa automaticamente a cada 24 horas
-  schedule:
-    - cron: "0 */24 * * *"
+    # list of files to generate.
+    # one file per line. Each output can be customized with options as query string.
+    #
+    #  supported options:
+    #  - palette:     A preset of color, one of [github, github-dark, github-light]
+    #  - color_snake: Color of the snake
+    #  - color_dots:  Coma separated list of dots color.
+    #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+    #                 Exactly 5 colors are expected.
+    outputs: |
+      dist/github-snake.svg
+      dist/github-snake-dark.svg?palette=github-dark
+      dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
-  # Permite executar manualmente o job a qualquer momento
-  workflow_dispatch:
-
-  # Executa a cada push no branch master
-  push:
-    branches:
-      - master
-
-jobs:
-  generate:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-
-    steps:
-      # Gera um jogo da cobrinha a partir do gráfico de contribuições do GitHub do usuário (<nome_do_usuário_do_github>), gera uma animação svg em <caminho_saida_svg>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: marceloteck
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Faz o push do conteúdo do <build_dir> para um branch
-      # O conteúdo estará disponível em https://raw.githubusercontent.com/<usuário_do_github>/<repositório>/<target_branch>/<arquivo>, ou como página do GitHub
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    env:
+      # a github token is required to fetch the contribution calendar from github API
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
